--- a/src/style/style.less
+++ b/src/style/style.less
@@ -2,6 +2,7 @@
 
 body, p {
   // .medium-font;
+  font-family: "Roboto Regular";
 
   color: #555;
   -webkit-font-smoothing: antialiased;
@@ -26,6 +27,7 @@ body {
 
 a:-webkit-any-link {
   text-decoration: none !important;
+  color: #555;
 }
 
 .container {
