--- a/src/style/variables.less
+++ b/src/style/variables.less
@@ -5,10 +5,10 @@
 @xsmobile: ~"screen and (min-width: 0px) and (max-width: 440px)";
 @xldesktop: ~"screen and (min-width: 1200px)";
 
-// @font-face {
-//   font-family: "Avenir Next Medium";
-//   src: url(AvenirNext-Medium.ttf);
-// }
+@font-face {
+  font-family: "Roboto Regular";
+  src: url(./fonts/Roboto-Regular.ttf);
+}
 //
 // @font-face {
 //   font-family: "Avenir Next Demi";
